--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,13 +21,13 @@ jobs:
         if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q '^Exporer/'; then
           echo "changed=true" >> $GITHUB_OUTPUT
         else
-          echo "changed=false" >> $GITHUB_OUTPUT
+          echo "changed=true" >> $GITHUB_OUTPUT
         fi
     
     - uses: actions/setup-go@v4
       if: steps.changes.outputs.changed == 'true'
       with:
-        go-version: '1.21'
+        go-version: '1.19'
     
     - name: Run golangci-lint
       if: steps.changes.outputs.changed == 'true'
