--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   
-  lint-exporer:
+  go-lint:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v4
@@ -34,9 +34,9 @@ jobs:
       uses: golangci/golangci-lint-action@v3
       with:
         version: latest
-        working-directory: Exporer
+        working-directory: Exporter
 
-  test:
+  e2e-test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
