--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q '^Exporter/'; then
           echo "changed=true" >> $GITHUB_OUTPUT
         else
-          echo "changed=false" >> $GITHUB_OUTPUT
+          echo "changed=true" >> $GITHUB_OUTPUT
         fi
     
     - uses: actions/setup-go@v4
