--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,6 +109,7 @@ jobs:
         docker network rm internal 2>/dev/null || true
         echo "Listing all remaining docker networks..."
         echo "# docker network ls"
+        docker network ls
 
   docker-image-build:
     runs-on: self-hosted
