Updated with e2e test - just v8

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -171,6 +171,9 @@ jobs:
       run: |
         echo "Waiting for generator container to finish..."
         docker wait openvpn-generator 2>/dev/null || true
+
+        echo "Just for sure showing running containers..."
+        docker ps | grep openvpn-generator
     - name: Deploy server container
       run: |
         echo "Deploying openvpn-server container..."
