--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -174,7 +174,7 @@ jobs:
     - name: Verify if openvpn-generator is not running
       run: |
         echo "Just for sure showing running containers..."
-        docker ps | grep openvpn-generator
+        docker ps | grep openvpn-generator || true
     - name: Deploy server container
       run: |
         echo "Deploying openvpn-server container..."
