--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -262,10 +262,10 @@ jobs:
           debian:bookworm
     - name: Run ping test
       run: |
-        docker exec -it openvpn-client-bookworm ping 10.10.10.10 -c 10
-        docker exec -it openvpn-client-bullseye ping 10.10.10.10 -c 10
-        docker exec -it openvpn-client-focal ping 10.10.10.10 -c 10
-        docker exec -it openvpn-client-jammy ping 10.10.10.10 -c 10
+        docker exec openvpn-client-bookworm ping 10.10.10.10 -c 10
+        docker exec openvpn-client-bullseye ping 10.10.10.10 -c 10
+        docker exec openvpn-client-focal ping 10.10.10.10 -c 10
+        docker exec openvpn-client-jammy ping 10.10.10.10 -c 10
     - name: Wait for 30 seconds
       run: |
         sleep 30
