Updated with e2e test - just v21

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -257,6 +257,7 @@ jobs:
           --name openvpn-protected-service \
           --network=openvpn_internal \
           --ip=10.10.10.10 \
+          --cap-add=NET_ADMIN \
           openvpn-protected-service
     - name: Run ping test
       run: |
