--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -261,9 +261,9 @@ jobs:
           openvpn-protected-service
     - name: Run ping test
       run: |
-        docker exec openvpn-client-bookworm ping 10.10.10.10 -c 10
-        docker exec openvpn-client-bullseye ping 10.10.10.10 -c 10
-        docker exec openvpn-client-jammy ping 10.10.10.10 -c 10
+        docker exec openvpn-client-bookworm ping 10.10.10.10 -c 100 -s 1300
+        docker exec openvpn-client-bullseye ping 10.10.10.10 -c 100 -s 1300
+        docker exec openvpn-client-jammy ping 10.10.10.10 -c 100 -s 1300
     - name: Wait for 30 seconds
       run: |
         sleep 30
